@@ -93,7 +93,7 @@ stages:
     - module load gcc/4.9.3
 
 # Build of dependencies and mfem:
-# if on quartz, uses a subpart of preallocated resources
+# if on quartz, uses a part of preallocated resources
 .build_hypre:
   variables:
     EXEC_PREFIX: ""
