@@ -48,10 +48,8 @@ shift
 
 # Verify C++ code styling in MFEM
 cd $mfem_dir
-
 make distclean
 make style
-
 (git diff) 1>&2
 
 # Verify that std::cout and std::cerr are not used in the library (use mfem::out
