@@ -193,8 +193,9 @@ Miscellaneous
 
 - Added a Gitlab pipeline that automates PR testing on supercomputing systems
   and Linux clusters at Lawrence Livermore National Lab (LLNL). This can be
-  triggered only by LLNL developers, see .gitlab-ci.yml, the .gitlab file and
-  the updated CONTRIBUTING.md.
+  triggered only by LLNL developers, see .gitlab-ci.yml, the .gitlab directory
+  and the updated CONTRIBUTING.md.
+
 
 Version 4.0, released on May 24, 2019
 =====================================
